# convergio-kernel

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-kernel/: Cargo.toml
crates/convergio-kernel/src/: engine.rs  ext.rs  jarvis_proactive.rs  kernel_ask_routes.rs  lib.rs  mcp_bridge.rs  mcp_defs.rs  monitor.rs  recover.rs  routes.rs  routes_watchdog.rs  telegram_poller.rs  tests.rs  tests_watchdog.rs  types.rs  verify.rs  watchdog.rs  watchdog_handlers.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md  ADR-015-mlx-inference-kernel-jarvis.md
