[workspace]
resolver = "2"
members = ["crates/convergio-kernel"]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-kernel"

[workspace.dependencies]
# SDK dependencies
convergio-sdk = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.9" }
convergio-types = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.9" }
convergio-db = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.9" }
convergio-telemetry = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.9" }
convergio-ipc = { git = "https://github.com/Roberdan/convergio-ipc", tag = "convergio-ipc-v0.1.3" }
convergio-voice = { git = "https://github.com/Roberdan/convergio-voice", tag = "convergio-voice-v0.1.4" }

# Common deps — pin same versions as SDK for compatibility
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
