[package]
name = "convergio-kernel"
description = "Execution kernel — process lifecycle, sandbox isolation, resource limits"
version = "0.1.4"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
